--- a/css/globals.css
+++ b/css/globals.css
@@ -4,7 +4,9 @@ body{
     margin: 0;
     padding: 0;
 }
-
+body.lock__body{
+	overflow: hidden;
+}
 .wrapper{
 	max-width: 1440px;
 	padding-top: 70px;
