--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 
 @import "right_block.css";
 
-@import "add.css";
+/*@import "add.css";*/
+
+@import "popup_add.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap');
